--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@ code {
     monospace;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 h1,
 h2,
 h3,
@@ -33,10 +37,20 @@ ul,
 ol {
   margin: 0;
   padding: 0;
-  list-style-type: none;
+  list-style: none;
 }
 
 button {
-  border: none;
+  padding: 0;
+  background-color: transparent;
   cursor: pointer;
+  border: none;
+  font-family: inherit;
+}
+
+input {
+  display: block;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
 }
